--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <link href="node_modules/nouislider/dist/nouislider.css" rel="stylesheet">
-  <script src="node_modules/nouislider/dist/nouislider.js"></script>
+  <link href="nouislider.css" rel="stylesheet">
+  <script src="nouislider.js"></script>
 
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <meta name="robots" content="noindex, nofollow">
