new comments in code

--- a/index.html
+++ b/index.html
@@ -3,38 +3,43 @@
 
 <head>
   <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
-  <link href="nouislider.css" rel="stylesheet">
-  <script src="nouislider.js"></script>
-
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-  <meta name="robots" content="noindex, nofollow">
-  <meta name="googlebot" content="noindex, nofollow">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <link rel="stylesheet" href="map.css" />
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
-        integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
-        crossorigin=""/>
-  <!-- Make sure you put this AFTER Leaflet's CSS -->
-  <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
-          integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
-          crossorigin=""></script>
-
-  <link rel="stylesheet" href="https://unpkg.com/leaflet-search@2.3.7/dist/leaflet-search.src.css" />
-
-
-
-  <script src='https://code.jquery.com/jquery-1.11.0.min.js'></script>
-  <link rel="stylesheet" href="dist/MarkerCluster.css" />
-  <link rel="stylesheet" href="dist/MarkerCluster.Default.css" />
-  <script src="dist/leaflet.markercluster-src.js"></script>
-  <script src="data.js"></script>
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Lausanne Iconographie LTM</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
+
+
+  <!--  NoUIslider Import-->
+  <link href="nouislider.css" rel="stylesheet">
+  <script src="nouislider.js"></script>
+
+  <meta name="robots" content="noindex, nofollow">
+  <meta name="googlebot" content="noindex, nofollow">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!--  leaflet-->
+  <link rel="stylesheet" href="map.css" />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+        integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+        crossorigin=""/>
+  <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+          integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
+          crossorigin=""></script>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet-search@2.3.7/dist/leaflet-search.src.css" />
+
+
+  <!--  MarkerCluster-->
+  <script src='https://code.jquery.com/jquery-1.11.0.min.js'></script>
+  <link rel="stylesheet" href="dist/MarkerCluster.css" />
+  <link rel="stylesheet" href="dist/MarkerCluster.Default.css" />
+  <script src="dist/leaflet.markercluster-src.js"></script>
+
+  <!--  Database-->
+  <script src="data.js"></script>
+
+
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
