Add filter button

--- a/index.html
+++ b/index.html
@@ -154,7 +154,9 @@
           <div class="col-xl-5 col-lg-6 video-box d-flex justify-content-center align-items-stretch position-relative">
             <div class="block">
               <div class="top" id="slider"></div>
-              <div class="bottom"><p>Montrer les images de <span id="min"></span> à <span id="max"></span></p></div>
+              <div class="bottom"><p>Montrer les images de <span id="min"></span> à <span id="max"></span></p>
+                <input onclick="update_map()" type="button" value="Filtrer">
+              </div>
               <div  class="bottom" id="map"></div>
 
             </div>
