Added pichard path

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
 
-
   <!--  NoUIslider Import-->
   <link href="nouislider.css" rel="stylesheet">
   <script src="nouislider.js"></script>
@@ -27,7 +26,8 @@
   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
           integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
           crossorigin=""></script>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet-search@2.3.7/dist/leaflet-search.src.css" />
+<!--  <link rel="stylesheet" href="https://unpkg.com/leaflet-search@2.3.7/dist/leaflet-search.src.css" />-->
+
 
 
   <!--  MarkerCluster-->
@@ -458,8 +458,6 @@
   <script src="assets/js/main.js"></script>
 
 
-  <!--  metro ui slider-->
-  <script src="https://cdn.metroui.org.ua/v4/js/metro.min.js"></script>
 
 
 
