--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <script src="dist/leaflet.markercluster-src.js"></script>
 
   <!--  Database-->
-  <script src="data2.js"></script>
+  <script src="data.js"></script>
 
 
 
