--- a/index.html
+++ b/index.html
@@ -166,7 +166,10 @@
 
 
           <div class="col-xl-5 col-lg-6 icon-boxes d-flex flex-column align-items-stretch justify-content-center py-5 px-lg-5">
-            <div id="slideshow"></div>
+            <div id="pichardGenerative">
+              <div id="scrolllist"></div>
+              <div id="gallery"></div>
+            </div>
 
           </div>
         </div>
@@ -456,11 +459,6 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-
-
-
-
-
 
 
 </body>
