--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
   <link rel="stylesheet" href="dist/MarkerCluster.css" />
   <link rel="stylesheet" href="dist/MarkerCluster.Default.css" />
   <script src="dist/leaflet.markercluster-src.js"></script>
+  <script src="node_modules/leaflet-search/dist/leaflet-search.src.js"></script>
+  <link rel="stylesheet" href="node_modules/leaflet-search/dist/leaflet-search.src.css" />
 
   <!--  Database-->
-  <script src="data.js"></script>
+  <script src="dataPichard.js"></script>
 
 
 
@@ -49,15 +51,15 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
+<!--  <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">-->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+<!--  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">-->
+<!--  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">-->
+<!--  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">-->
+<!--  <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">-->
+<!--  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">-->
 
-  <!-- Template Main CSS File -->
+<!--  &lt;!&ndash; Template Main CSS File &ndash;&gt;-->
   <link href="assets/css/style.css" rel="stylesheet">
 
   <!-- =======================================================
