added custom bulleinfo

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <link rel="stylesheet" href="dist/MarkerCluster.Default.css" />
   <script src="dist/leaflet.markercluster-src.js"></script>
   <script src="node_modules/leaflet-search/dist/leaflet-search.src.js"></script>
-  <link rel="stylesheet" href="node_modules/leaflet-search/dist/leaflet-search.src.css" />
+  <link rel="stylesheet" href="node_modules/leaflet-search/dist/leaflet-search.src.css  " />
 
   <!--  Database-->
   <script src="dataPichard.js"></script>
@@ -179,7 +179,16 @@
       </div>
     </section><!-- End Pichard Section -->
 
+    <div>
+      Ceci est une chouette
+      <div class="imgbulle">
+        image
+        <span class="bulle"><img src="
+             http://museris.lausanne.ch/SGCM/GetImage.ashx?FileName=SGCMImages/ImgHD/ImgDeg/MHL111702-1_1.JPG&amp;id=111701
+        "></span>
+      </div>
 
+    </div>
 
 
     <!-- ======= Team Section ======= -->
@@ -189,7 +198,7 @@
         <div class="section-title">
           <h2>Team</h2>
           <h3>Our Hard Working <span>Team</span></h3>
-          <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
+
         </div>
 
         <div class="row justify-content-center">
