Analyse Grand Pont ajoutée

--- a/Ceinture-Pichard.html
+++ b/Ceinture-Pichard.html
@@ -92,12 +92,16 @@
       <div class="u-clearfix u-sheet u-sheet-1">
         <div class="fr-view u-clearfix u-rich-text u-text u-text-1">
           <h1 style="text-align: left;">La Ceinture Pichard</h1>
-          <p id="isPasted">Au début du XVIIIème siècle, la ville de Lausanne avait encore une structure typiquement médiévale et les routes qui permettaient de la traverser n’étaient que très peu praticables. En effet, les chars de l’époque devaient obligatoirement passer par des routes étroites et très raides, avec des pavés glissants, tout en devant faire des virages à angles droits, afin de passer d’un côté à l’autre de la ville.</p>
-          <p>Pourtant, Lausanne est déjà à l’époque un carrefour du trafic régional. En effet, il passait dans la ville quatre cent mille chars et voitures par an avant 1836. Nous pouvons noter que le passage par Lausanne était le point le plus ardu de la route entre Berne et Genève, ainsi qu’entre Milan et Paris.&nbsp;</p>
-          <p>De plus, à cette période la population de Lausanne ne cesse d’augmenter, ce qui satura encore plus le trafic dans la ville. Cette augmentation amena donc un besoin d’extension et de fluidification du trafic lausannois, mais la création de nouvelles routes et le développement de celles déjà existantes s’avèrent très limités à cause de la géographie en relief de la ville.&nbsp;</p>
-          <p>C’est dans l’objectif de résoudre ce problème que l’ingénieur Adrien Pichard (1790-1841) proposa en 1835 à la ville de Lausanne le projet de contourner la Cité grâce à une série de routes formant une boucle autour de la ville, sur lesquelles viendront se brancher les principales routes vers l'Italie, la France, l'Allemagne et Berne.</p>
-          <p>La ceinture Pichard est un ensemble de routes qui ont été construites entre 1838 et 1863. Le but de ces routes était de pouvoir passer de l’autre côté de la Cité sans devoir la traverser, et donc sans devoir utiliser les routes peu praticables existantes.</p>
-          <p>Cette construction a permis au XIXe siècle de faciliter l'accès à la ville, sa traversée et a grandement aidé au développement de la ville. Sur le tracé de la ceinture se trouvent aujourd’hui encore des voies de communications à Lausanne qui sont empruntées par des milliers de véhicules chaque jour.&nbsp;</p>
+          <p style="text-align: justify">
+              Au début du XVIIIème siècle, la ville de Lausanne a encore une structure typiquement médiévale et les routes qui permettent de la traverser n’étaient que très peu praticables. En effet, les chars de l’époque devaient obligatoirement passer par des routes étroites et très raides, avec des pavés glissants, tout en devant faire des virages à angles droits, pour pouvoir passer d’un côté à l’autre de la ville.<br>
+              Pourtant, Lausanne était déjà à l’époque un carrefour du trafic régional. En effet, il passait dans la ville quatre cent mille chars et voitures par an avant 1836. Nous pouvons aussi noter que le passage par Lausanne était le point le plus ardu de la route entre Berne et Genève, ainsi qu’entre Milan et Paris.<br>
+              De plus, à cette période la population de Lausanne ne cesse d’augmenter, ce qui saturait encore plus le trafic dans la ville. Cette augmentation a donc amené un besoin d’extension et de fluidification du trafic lausannois, mais la création de nouvelles routes et le développement de celles déjà existantes était très limitée à cause de la géographie en relief de la ville.<br>
+              C’est dans l’objectif de résoudre ce problème que l’ingénieur Adrien Pichard (1790-1841) propose en 1835 à la ville de Lausanne le projet de contourner la Cité grâce à une série de routes formant une boucle autour de la ville, sur lesquelles viendront se brancher les principales routes vers l'Italie, la France, l'Allemagne et Berne.<br>
+              La ceinture Pichard est un ensemble de routes qui ont été construites entre 1838 et 1863. Le but de ces routes était de pouvoir passer de l’autre côté de la Cité sans devoir la traverser, et donc sans devoir utiliser les routes peu praticables existantes.<br>
+              Cette construction a permis au XIXe siècle de faciliter l'accès à la ville, sa traversée et a grandement aidé au développement de la ville. Sur le tracé de la ceinture se trouvent aujourd’hui encore des voies de communications à Lausanne qui sont empruntées par des milliers de véhicules chaque jour.<br>
+
+
+          </p>
         </div>
       </div>
     </section>
@@ -156,13 +160,16 @@
 
     <section class="u-align-center u-clearfix u-section-5" id="sec-7604">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h2 class="u-text u-text-default u-text-1">Sample Headline</h2>
-        <p class="u-text u-text-2">Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
+        <h2 class="u-text u-text-default u-text-1">Analyse d'images: le Grand Pont</h2>
+        <p style="text-align: center; margin: 50px">
+            Afin de répondre aux questionnements de notre problématique nous avons sélectionné 36 images ou sources iconographiques comprises dans une période de 40 ans (1830 pour la plus ancienne et 1870 pour la plus récente). L’enjeu de notre travail est d’essayer d’élaborer un discours historique à l’aide des images choisies et de la position sur laquelle elles s’affichent sur la carte interactive.
+            </p>
         <div class="u-expanded-width u-gallery u-layout-grid u-lightbox u-show-text-on-hover u-gallery-1">
           <div class="u-gallery-inner u-gallery-inner-1">
             <div class="u-effect-fade u-gallery-item">
               <div class="u-back-slide">
-                <img class="u-back-image u-expanded" src="images/7.svg">
+                  <img class="u-back-image u-expanded" src="http://museris.lausanne.ch/SGCM/GetImage.ashx?FileName=SGCMImages/ImgHD/ImgDeg/C_MHL99284_1.JPG&amp;id=99284">
+
               </div>
               <div class="u-over-slide u-shading u-over-slide-1">
                 <h3 class="u-gallery-heading"></h3>
@@ -171,7 +178,7 @@
             </div>
             <div class="u-effect-fade u-gallery-item">
               <div class="u-back-slide">
-                <img class="u-back-image u-expanded" src="images/7.svg">
+                <img class="u-back-image u-expanded" src="http://museris.lausanne.ch/SGCM/GetImage.ashx?FileName=SGCMImages/ImgHD/ImgDeg/MHL112291_1.JPG&amp;id=112291">
               </div>
               <div class="u-over-slide u-shading u-over-slide-2">
                 <h3 class="u-gallery-heading"></h3>
@@ -180,7 +187,7 @@
             </div>
             <div class="u-effect-fade u-gallery-item">
               <div class="u-back-slide">
-                <img class="u-back-image u-expanded" src="images/7.svg">
+                  <img class="u-back-image u-expanded" src="http://museris.lausanne.ch/SGCM/GetImage.ashx?FileName=SGCMImages/ImgHD/ImgDeg/MHL113924_1.JPG&amp;id=113924">
               </div>
               <div class="u-over-slide u-shading u-over-slide-3">
                 <h3 class="u-gallery-heading"></h3>
@@ -189,7 +196,72 @@
             </div>
           </div>
         </div>
-        <p class="u-align-left u-text u-text-3"> Exemple de texte. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo sagittis suscipit ultrices.</p>
+            <div style="text-align: justify; margin-top: 50px">
+
+
+                Que peut-on apprendre des images au sujet du Grand Pont ?
+                <br>            <br>
+
+
+                Nous observons une grande variété dans les sources iconographiques illustrant le Grand Pont.
+                Une multitude de représentations qui n’est pas surprenante en regard de l’importance de cet élément dans l’entrée de Lausanne vers la modernité.
+                Le Grand Pont constitue également l’élément-clé de la ceinture Pichard ce que corrobore – dans notre tracé - le nombre important d’images l’ayant comme sujet.
+                Ainsi sur les 36 images que nous avons sélectionnées pour notre analyse, le Grand Pont figure sur 18 d’entre elles.
+                La grande variété des vues du Grand Pont atteste que sa construction a marqué le paysage lausannois ;
+                sans aller jusqu’à parler d’une omniprésence du Grand Pont dans l’iconographie lausannoise, nous constatons qu’il domine les vues qui partent de la ceinture Pichard.
+                En effet, il est présent sur différents tronçons par exemple (4, 2 & 6), ce qui n’est pas le cas d’autres éléments d’urbanisme circonscrits à une zone particulière
+                comme l’<div class="imgbulle">
+                hôtel d’Angleterre.
+                <span class="bulle"><img src="
+http://museris.lausanne.ch/SGCM/GetImage.ashx?FileName=SGCMImages/ImgHD/ImgDeg/C_MHL118400_1.JPG&amp;id=118400
+        "></span>
+            </div>
+                <br>
+
+                L’iconographie du Grand Pont révèle son importance dans l’urbanisme lausannois ; construction non seulement utilitaire, ce dernier est également une réalisation artistique. Par ailleurs, l’iconographie s’empare du Grand Pont comme un sujet de représentation, comme en témoignent les différentes manières de le figurer. Régulièrement, il est représenté à l’horizontal en vue de face, comme sur cette
+                <div class="imgbulle">
+                    photographie
+                    <span class="bulle"><img src="
+http://museris.lausanne.ch/SGCM/GetImage.ashx?FileName=SGCMImages/ImgHD/ImgDeg/C_MHL99284_1.JPG&amp;id=99284
+        "></span>
+                </div>
+                qui est emblématique des mises en image du Grand Pont. Plus original, l’
+                <div class="imgbulle">
+                    image
+                    <span class="bulle"><img src="
+http://museris.lausanne.ch/SGCM/GetImage.ashx?FileName=SGCMImages/ImgHD/ImgDeg/MHL112291_1.JPG&amp;id=112291
+        "></span>
+                </div>
+                présente le Grand Pont de biais, ce dernier participe à la création du point de fuite ce qui l’incorpore en élément esthétique de l’image. En outre, les images montrent que les particuliers commencent à s’approprier ce dernier, nous avons ainsi des croquis
+                <div class="imgbulle">
+                    croquis
+                    <span class="bulle"><img src="
+http://museris.lausanne.ch/SGCM/GetImage.ashx?FileName=SGCMImages/ImgHD/ImgDeg/MHL139172_1.JPG&amp;id=139172
+        "></span>
+                </div>, des
+                <div class="imgbulle">
+                    études
+                    <span class="bulle"><img src="
+http://museris.lausanne.ch/SGCM/GetImage.ashx?FileName=SGCMImages/ImgHD/ImgDeg/MHL113924_1.JPG&amp;id=113924
+        "></span>
+                </div>
+                et des
+                <div class="imgbulle">
+                    dessins
+                    <span class="bulle"><img src="
+http://museris.lausanne.ch/SGCM/GetImage.ashx?FileName=SGCMImages/ImgHD/ImgDeg/MHL112229_1.JPG&amp;id=112229
+        "></span>
+                </div>
+                . À partir de notre importante base de données, nous avons également procédé à une analyse de données des représentations du Grand Pont entre 1830 et 1870; nous avons constaté un pic de production des images entre 1860 - 1870 qui sera suivi par une réduction de ces images lors de la décennie suivante (1880-1890), nous pouvons, peut-être, y voir un effet de banalisation; le Grand Pont n’étant plus perçu comme un élément nouveau mais appartenant au paysage urbain lausannois comme l’atteste cette
+                <div class="imgbulle">
+                    image
+                    <span class="bulle"><img src="
+http://museris.lausanne.ch/SGCM/GetImage.ashx?FileName=SGCMImages/ImgHD/ImgDeg/MHL112305_1.JPG&amp;id=112305
+        "></span>
+                </div>
+                qui propose une vue panoramique de Lausanne dans laquelle le Grand Pont est complètement incorporé.
+
+            </div>
       </div>
     </section>
     
