Added image analysis

--- a/index.html
+++ b/index.html
@@ -119,9 +119,7 @@
     <div class="u-clearfix u-sheet u-sheet-1">
         <h3 class="u-text u-text-1">Notre Projet&nbsp;</h3>
         <p class="u-text u-text-2"><b>
-            <span style="font-weight: 400;">Ce site est l’aboutissement de notre projet de groupe. Nous avons eu accès à une base de données iconographiques de la ville de Lausanne regroupant des images de différentes époques et différents lieux plus ou moins iconiques. Nous avons décidé de créer une carte interactive qui regroupe les ima</span>
-            <span style="font-weight: 400;">ges d</span>
-            <span style="font-weight: 400;">e la base de données, ces dernières sont placées géographiquement de manière précise et sont accompagnées d’une description. Pour approfondir l’analyse historique de cette source iconographique, nous nous sommes concentrés sur certains sujets (ceinture Pichard etc…) en sélectionnant, à l’aide d’outils et manuellement, des images pertinentes auxquelles</span>
+            <span style="font-weight: 400;">Ce site est l’aboutissement de notre projet de groupe. Nous avons eu accès à une base de données iconographiques de la ville de Lausanne regroupant des images de différentes époques et différents lieux plus ou moins iconiques. Nous avons décidé de créer une carte interactive qui regroupe les images de la base de données, ces dernières sont placées géographiquement de manière précise et sont accompagnées d’une description. Pour approfondir l’analyse historique de cette source iconographique, nous nous sommes concentrés sur certains sujets (ceinture Pichard etc…) en sélectionnant, à l’aide d’outils et manuellement, des images pertinentes auxquelles</span>
             <span style="font-weight: 400;">nous avons apporté une analyse historique plus poussé grâce à d’autres sources (textes, images additionnelles). L’interactivité de la carte a aussi été implémentée sur mesure pour accompagner et complémenter au mieux chaque sujet et son analyse.</span></b>
         </p>
     </div>
@@ -131,18 +129,16 @@
         <h1 class="u-align-center u-text u-text-default u-text-1">La carte</h1>
     </div>
 </section>
-<section class="u-clearfix u-section-5" id="sec-038d"  >
-    <div class="u-clearfix u-sheet u-sheet-1"  style=" margin-left:10%; margin-right:10%;">
 
 
         <section id="pichard" class="pichard">
             <div class="u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1" >
                 <div class="u-layout">
                     <div class="u-layout-row">
-                        <div class="u-container-style u-layout-cell u-size-40 u-layout-cell-1" >
+                        <div class="u-container-style u-layout-cell u-size-30 u-layout-cell-1" >
                             <div class="u-container-layout u-container-layout-1">
                                 <div class="block">
-                                    <div class="top" id="slider"></div>
+                                    <div class="top">Timeline: <div  id="slider"></div></div>
                                     <div class="bottom"><p>Montrer les images de <span id="min"></span> à <span id="max"> </span> <input onclick="update_map()" type="button" value="Filtrer"></p>
 
                                     </div>
@@ -151,7 +147,7 @@
 
                             </div>
                         </div>
-                        <div class="u-container-style u-layout-cell u-size-20 u-layout-cell-2">
+                        <div class="u-container-style u-layout-cell u-size-30 u-layout-cell-2">
                             <div class="u-container-layout u-container-layout-2">
                                 <div id="pichardGenerative">
                                     <div id="scrolllist"></div>
@@ -168,9 +164,6 @@
 
 
 
-
-    </div>
-</section>
 
 
 <footer class="u-align-center u-clearfix u-footer u-white-80 u-footer" id="sec-85f5"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
