--- a/Notre-equipe.html
+++ b/Notre-equipe.html
@@ -75,45 +75,39 @@
             <div class="u-align-left u-container-style u-list-item u-repeater-item">
               <div class="u-container-layout u-similar-container u-valign-top u-container-layout-1">
                 <div alt="" class="u-image u-image-circle u-image-1" data-image-width="881" data-image-height="1080"></div>
-                <h5 class="u-text u-text-1">Bertie Norton</h5>
-                <p class="u-text u-text-2">Secretary</p>
+                <h5 class="u-text u-text-1">Kevin Duc</h5>
+                <p class="u-text u-text-2">Étudiant en Master d'Humanités numériques et Sciences de l'antiquité</p>
               </div>
             </div>
             <div class="u-align-left u-container-style u-list-item u-repeater-item">
               <div class="u-container-layout u-similar-container u-valign-top u-container-layout-2">
                 <div alt="" class="u-image u-image-circle u-image-2" data-image-width="881" data-image-height="1080"></div>
-                <h5 class="u-text u-text-3">Polly Walter</h5>
-                <p class="u-text u-text-4">Advertising Manager</p>
+                <h5 class="u-text u-text-3">Amandine Favre</h5>
+                <p class="u-text u-text-4">Étudiante en Master de Mathématiques </p>
               </div>
             </div>
             <div class="u-align-left u-container-style u-list-item u-repeater-item">
               <div class="u-container-layout u-similar-container u-valign-top u-container-layout-3">
                 <div alt="" class="u-image u-image-circle u-image-3" data-image-width="881" data-image-height="1080"></div>
-                <h5 class="u-text u-text-5">Phoebe Nelson</h5>
-                <p class="u-text u-text-6">Advertising</p>
+                <h5 class="u-text u-text-5">Théo Gieruc</h5>
+                <p class="u-text u-text-6">Étudiant en Master de Robotique</p>
               </div>
             </div>
             <div class="u-align-left u-container-style u-list-item u-repeater-item">
               <div class="u-container-layout u-similar-container u-valign-top u-container-layout-4">
                 <div alt="" class="u-image u-image-circle u-image-4" data-image-width="881" data-image-height="1080"></div>
-                <h5 class="u-text u-text-7">Jorge Greer</h5>
-                <p class="u-text u-text-8">HR Manager</p>
+                <h5 class="u-text u-text-7">Guillaume Krafft</h5>
+                <p class="u-text u-text-8">Étudiant en Master de Robotique</p>
               </div>
             </div>
             <div class="u-align-left u-container-style u-list-item u-repeater-item">
               <div class="u-container-layout u-similar-container u-valign-top u-container-layout-5">
                 <div alt="" class="u-image u-image-circle u-image-5" data-image-width="881" data-image-height="1080"></div>
-                <h5 class="u-text u-text-9">Jorge Greer</h5>
-                <p class="u-text u-text-10">HR Manager</p>
+                <h5 class="u-text u-text-9">Inès Tofiño Vázquez</h5>
+                <p class="u-text u-text-10">Étudiante en Master de Mathématiques</p>
               </div>
             </div>
-            <div class="u-align-left u-container-style u-list-item u-repeater-item">
-              <div class="u-container-layout u-similar-container u-valign-top u-container-layout-6">
-                <div alt="" class="u-image u-image-circle u-image-6" data-image-width="881" data-image-height="1080"></div>
-                <h5 class="u-text u-text-11">Jorge Greer</h5>
-                <p class="u-text u-text-12">HR Manager</p>
-              </div>
-            </div>
+
           </div>
         </div>
       </div>
