--- a/Ceinture-Pichard.html
+++ b/Ceinture-Pichard.html
@@ -273,7 +273,7 @@ http://museris.lausanne.ch/SGCM/GetImage.ashx?FileName=SGCMImages/ImgHD/ImgDeg/M
                                       <span class="bulle"><img src="
                                             http://museris.lausanne.ch/SGCM/GetImage.ashx?FileName=SGCMImages/ImgHD/ImgDeg/C_MHL99091_1.JPG&amp;id=99091
                                             "></span>
-                                  </div><br>
+                                  </div>
                                   où on ne fait que deviner l’enseigne de l’Hôtel de France, ou alors tout à fait central, comme sur
 
                                   <div class="imgbulle">
@@ -281,7 +281,7 @@ http://museris.lausanne.ch/SGCM/GetImage.ashx?FileName=SGCMImages/ImgHD/ImgDeg/M
                                       <span class="bulle"><img src="
                                             http://museris.lausanne.ch/SGCM/GetImage.ashx?FileName=SGCMImages/ImgHD/ImgDeg/C_MHL119369_1.JPG&amp;id=119369
                                             "></span>
-                                  </div><br>
+                                  </div>
 
                                   de l’hôtel Grand-Pont. Peut-être peut-on y voir un effet d’intégration des hôtels à la ville.<br>
                                   A l’époque, le tourisme à Lausanne était surtout du tourisme médical, et beaucoup des voyageurs étaient des retraités fortunés.
