--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <div class="u-align-center u-container-style u-layout-cell u-size-30 u-layout-cell-2" data-animation-out="0">
                         <div class="u-container-layout u-valign-middle u-container-layout-2">
                             <h2 class="u-text u-text-default u-text-1">Lausanne Time Machine</h2>
-                            <p class="u-text u-text-2"> Dans le cadre de notre cours SHS nous avons participé au programme Lausanne Time Machine. Ce cours regroupe des étudiants au parcours multiples, et leur but est de mettre en lien technologie et histoire lausannoise.</p>
+                            <p class="u-text u-text-2">Dans le cadre du cours <a href="https://www.epfl.ch/schools/cdh/fr/enseignement/cours-unil-epfl-2020-2021/histoire-urbaine-a-lere-du-numerique-lausanne-time-machine/">Histoire urbaine digitale</a>,  nous avons participé au programme Lausanne Time Machine, qui regroupe des étudiants au parcours multiples, et dont le but est de mettre en lien technologie et histoire lausannoise.</p>
                         </div>
                     </div>
                 </div>
